# semihosting-RISC-V

./: .gitignore  README.md
semihost/file/: Makefile  crt.s  encoding.h  main.c  read.txt  syscalls.c  syscalls.h
semihost/printf/: print_riscv
sysc/: CMakeLists.txt  Makefile  crt.S  for_read.txt  link.ld  main.c  programm_c  start.sh  syscalls.c  syscalls.h
sysc/inc/: link.ld
sysc/src/: crt.S  main.c  syscalls.c
test/semihost/file/: Makefile  read.txt  sp.cfg  write.txt
test/tests/: crt.S
